Activity -> New parameter available: "/report", display the report of played time